@@ -38,9 +38,4 @@ OBJS    = nsdb.o
 HDRS    = db.h
 TCL     = util.tcl
 
-DLL	= nsdb
-DLLHDRS = nsdb.h
-DLLOBJS = $(LIBOBJS)
-DLLHDRS = $(LIBHDRS)
-
 include ../include/Makefile.build
