@@ -1,3 +1,8 @@
+2008-03-11  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* Remove Makefile.win32 everywhere, this build model is not supported and
+	i do not see any reason to keep it.
+
 2008-03-09  Vlad Seryakov  <seryakov@users.sf.net>
 
     	* include/ns.h:
